src/objects/LeanData__Trigger_Setting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>LeanData__Account_Trigger_Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Account Trigger Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeanData__CampaignMember_Trigger_Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Campaign Member Trigger Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeanData__Case_Trigger_Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Case Trigger Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeanData__Contact_Trigger_Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Contact Trigger Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeanData__Lead_Trigger_Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Lead Trigger Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeanData__Opportunity_Trigger_Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Opportunity Trigger Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeanData__User_Trigger_Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>User Trigger Enabled</label>
        <type>Checkbox</type>
    </fields>
    <label>Trigger Setting</label>
</CustomObject>